--- a/vuex_todolist/todolist/package.json
+++ b/vuex_todolist/todolist/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music",
+  "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,19 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
-    "jsonp": "^0.2.1",
-    "swiper": "^3.2.7",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
