--- a/project/music/package.json
+++ b/project/music/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "swiper": "^3.2.7",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
